Fixes an issue with the section tabs in the settings getting squashed incorrectly
git-svn-id: http://svn.mythtv.org/svn/trunk@19026 7dbf422c-18fa-0310-86e9-fd20926502f2

--- a/skins/default/settings.css
+++ b/skins/default/settings.css
@@ -59,6 +59,7 @@
         border-bottom:  1px solid #9090B0;
         height:         2.25em;
         vertical-align: bottom;
+        min-width:      60%;
     }
 
     #settings .x-sections ul {
@@ -140,4 +141,3 @@
     #settings .x-content tr.x-sep th, #settings .x-content tr.x-sep td {
         border-bottom:      1px solid #304943;
     }
-
